--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="five">
+    <table border="5">
         <tr>
             <th>fruits</th>
             <th>vegetables</th>
